--- a/src/html/page-list.twig
+++ b/src/html/page-list.twig
@@ -14,7 +14,11 @@
 	</section>
 {% endblock %}
 
-{% block stylesheets %}{% endblock %}
+{% block stylesheets %}
+<link rel="stylesheet" href="assets/stylesheets/page-list.min.css" />
+{% endblock %}
 
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+	<script src="assets/javascripts/page-list.js"></script>
+{% endblock %}
  
