--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -35,7 +35,7 @@
 						<div class="row">
 							<div class="col-md-5">
 								<div class="test__img">
-									<img class="lazyload" data-src="assets/images/test/1-xl.jpg" alt="Section1">
+									<img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="assets/images/test/1-xl.jpg" alt="Section1">
 								</div>
 							</div>
 							<div class="col-md-6 offset-md-1 test__content">
@@ -324,7 +324,7 @@
 							<div class="col-md-5">
 								<h2 class="test__title" data-reveal data-reveal-transform='{"x": 0, "y": 100}'>Services</h2>
 								<div data-reveal data-reveal-delay="200" class="test__img">
-									<img class="lazyload" data-src="assets/images/test/3-xl.jpg" alt="Section3">
+									<img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="assets/images/test/3-xl.jpg" alt="Section3">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
 							</div>
@@ -347,7 +347,7 @@
 							<div class="col-md-6 offset-md-1">
 								<h2 class="test__title">Test</h2>
 								<div class="test__img">
-									<img class="lazyload" data-src="assets/images/test/4-xl.jpg" alt="Section4">
+									<img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="assets/images/test/4-xl.jpg" alt="Section4">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
 							</div>
