--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -300,7 +300,7 @@
 						<div class="slider" data-plugin="testSlider">
 							<div class="slider__holder">
 								<div class="slider__item" style="background-image: url('assets/images/test/4-xl.jpg');"></div>
-								<div class="slider__item" style="background-image: url('assets/images/test/5-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/2-xl.jpg');"></div>
 								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
 							</div>
 							<div class="slider__nav"></div>
@@ -364,23 +364,23 @@
 								<div class="test__img">
 									<picture>
 										<source
-											srcset="assets/images/test/5-xs.jpg"
+											srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
 											data-srcset="assets/images/test/5-xs.jpg 240w "
 											media="(max-width: 576px)" />
 										<source
-												srcset="assets/images/test/5-xs.jpg"
+												srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
 												data-srcset="assets/images/test/5-sm.jpg 576w"
 												media="(max-width: 768px)" />
 										<source
-												srcset="assets/images/test/5-xs.jpg"
+												srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
 												data-srcset="assets/images/test/5-md.jpg 768w"
 												media="(max-width: 992px)" />
 										<source
-												srcset="assets/images/test/5-xs.jpg"
+												srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
 												data-srcset="assets/images/test/5-lg.jpg 992w"
 												media="(max-width: 1200px)" />
 										<source
-												srcset="assets/images/test/5-xs.jpg"
+												srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
 												data-srcset="assets/images/test/5-xl.jpg 1200w" />
 									<img
 											src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
