--- a/src/html/partials/header.twig
+++ b/src/html/partials/header.twig
@@ -31,7 +31,7 @@
 					<div class="header__phone">+7 9123456789</div>
 					<a href="mailto:project@mail.com">project@mail.com</a>
 				</div>
-				<a href="#" class="ham-trigger"></a>
+				<a href="#" class="ham-trigger">&nbsp;</a>
 			</div>
 	</div>
 </header>
