--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -25,12 +25,20 @@
 			document.documentElement.style.setProperty('--viewport-height-actual', window.innerHeight + 'px');
 		}
 	</script>
-	<link rel="stylesheet" href="assets/stylesheets/global.min.css" />
-	{% block stylesheets %}{% endblock %}
+	<link rel="stylesheet" href="assets/stylesheets/global.min.css">
+	{% block stylesheets %}
+		<style>
+			.preloader.visible {
+				visibility: visible;
+				opacity: 1;
+				transition: opacity .5s linear;
+			}
+		</style>
+	{% endblock %}
 </head>
 <body data-plugin="reveal" data-preload>
 	<div class="page-content-wrapper">
-		<div class="preloader"><div class="preloader__loader"></div></div>
+		<div class="preloader visible"><div class="preloader__loader"></div></div>
 		{% block header %}
 			{% include "../partials/header.twig" with { navigation: header.navigation } %}
 		{% endblock %}
