--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -411,7 +411,8 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="assets/stylesheets/test.min.css" />
+	<link rel="preload" as="style" href="assets/stylesheets/test.min.css"  onload="this.rel='stylesheet'" />
+	<noscript><link rel="stylesheet" href="assets/stylesheets/test.min.css"></noscript>
 {% endblock %}
 
 {% block javascripts %}
