--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -22,7 +22,7 @@ body {
     min-height: var(--viewport-height);
     margin: 0;
     position: relative;
-    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "NeoSans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.6rem;
     line-height: 22 / 16 * 1em;
     font-weight: normal;
@@ -59,6 +59,7 @@ img[draggable="false"] {
 
 .page-content-wrapper {
     min-width: 320px;
+    overflow: hidden;
 }
 
 .page-content {
