--- a/src/stylesheets/modules/_footer.scss
+++ b/src/stylesheets/modules/_footer.scss
@@ -19,6 +19,7 @@
 		text-align: center;
 		margin: 0 auto 20px;
 		color: #000;
+		text-decoration: none;
 
 		@include media-breakpoint-up(sm) {
 			text-align: left;
