--- a/src/html/page-list.twig
+++ b/src/html/page-list.twig
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.twig' %}
 
+{% set curPageId = 'pageList' %}
+
 {% block title %}Page list{% endblock %}
 
 {% block body %}
