--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -5,7 +5,7 @@
 	'class': 'header_light'
 } %}d
 
-{% set curPage = 'test' %}
+{% set curPageId = 'test' %}
 
 {% block title %}Page test{% endblock %}
 
