--- a/src/html/partials/ham-panel.twig
+++ b/src/html/partials/ham-panel.twig
@@ -1,12 +1,15 @@
-<div class="ham-panel">
+<div class="ham-panel {% if curPageId == 'home' %} ham-panel_landing {% endif %}">
 	<div class="ham-panel__holder">
-		<nav class="ham-panel-nav">
+		<nav class="ham-panel-nav" data-plugin="dropdown"> 
 			<ul>
 				{% for item in navigation %}
 					{% if item.children|default(false) and item.children|length %}
 						<li class="has-children">
-							<span>{{ item.title }}</span>
-							<div class="sub-nav">
+							<span>
+								<a href="#">{{ item.title }}</a>
+								<a href="#sub-nav" class="sub-trigger" data-dropdown-btn>&nbsp;</a>
+							</span>
+							<div class="sub-nav" data-dropdown-content="sub-nav">
 								<ul>
 									{% for item in item.children %}
 										<li><a href="{{ item.url }}">{{ item.title }}</a></li>
@@ -20,9 +23,9 @@
 				{% endfor %}
 			</ul>
 		</nav>
-		<div class="ham-panel__info">
-			<div class="ham-panel__phone">+7 9123456789</div>
-			<a href="mailto:project@mail.com">project@mail.com</a>
+		<div class="ham-panel__info">			
+			<div class="ham-panel__phone"><a href="tel:+79001234567">8 (900) 1234567</a></div>
+			<div class="ham-panel__mail"><a href="mailto:mail@mail.ru">mail@mail.ru</a></div>
 		</div>
 	</div>
 
