--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -2,7 +2,7 @@
 
 @import "~normalize-scss/sass/normalize/import-now";
 
-@import "bootstrap/bootstrap-grid";
+//@import "bootstrap/bootstrap-grid";
 
 @import "imports";
 
