--- a/src/stylesheets/modules/_ham-panel.scss
+++ b/src/stylesheets/modules/_ham-panel.scss
@@ -4,14 +4,14 @@
 	top: 0;
 	right: 0;
 	left: 0;
-	padding: 100px 0 40px;
+	padding: 100px 0 40px; // top = header height
 	opacity: 0;
 	transform: translateX(200px);
 	transition: all .65s ease-in-out; 
 
 	&.active {
 		transform: translateX(0);
-		opacity: 1;;
+		opacity: 1;
 	}
 
 	@include media-breakpoint-up(sm) {
@@ -25,11 +25,52 @@
 		justify-content: space-between;
 		height: 100%;
 		overflow-y: scroll;
+		position: relative;
+
+		left: -40px;
+    padding-left: 40px;
+    margin-right: -40px;
+
+		&:before {
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			left: -30px;
+			height: 20px;
+		}
 	}
+
+	// &_landing &__holder:before {
+	// 	box-shadow: inset 0px 7px 5px -5px rgba(0, 0, 0, 0.2);
+	// 	transition: box-shadow .3s ease-in-out;
+	// 	transition-delay: .6s ease-out;
+	// }
 
 	&__info {
 		padding: 0 40px;
 		text-align: center;
+	}
+
+	&__request {
+		margin-bottom: 40px;
+	}
+
+	&__phone {
+		a {
+			text-decoration: none;
+			color: #000;
+			font-weight: 600;
+		}
+	}
+
+	&__mail {
+		a {
+			color: #000;
+			text-decoration: none;
+			border-bottom: 1px solid #e1e3e4;
+			line-height: 1;
+		}
 	}
 }
 
@@ -41,46 +82,72 @@
 		list-style: none;
 		
 		& > li {	
-			margin-bottom: 10px;
+			margin-bottom: 5px;
 			
 			& > a,
-			& > span {
+			& span  a {
 				color: #000;
 				padding: 10px 40px;
 				text-decoration: none;
 				display: block;
 			}
-			
-			&.active a {
-				pointer-events: none;
-				background-color: rgba(131, 131, 131, .2);
-			}
 
-			&.has-children > a,
-			&.has-children > span {
-				padding-right: 60px;
+			&.active {
 				position: relative;
-
 				&:before {
 					content: '';
-					border: 7px solid transparent;
-					border-top-color: #000;
 					position: absolute;
-					right: 20px;
-					top: 8px;
-					bottom: 0;
-					margin: auto 0;
-					width: 0;
-					height: 0;
+					left: -40px;
+					top: 0;
+					height: 42px;
+					background-color: rgba(131, 131, 131, .2);
+					right: 0;
+					border-top: 1px solid rgba(0, 0, 0, 0.05);
+					border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+				}
+			}
+			
+			&.has-children {
+				padding-right: 30px;
+
+				span {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+
+					.sub-trigger {
+						width: 30px;
+						height: 30px;
+						position: relative;
+						text-decoration: none;
+						padding: 0;
+						cursor: pointer;
+
+						&:before {
+							content: '';
+							border: 7px solid transparent;
+							border-top-color: #000;
+							position: absolute;
+							right: 0;
+							top: 12px;
+							left: 0;
+							margin: 0 auto;
+							width: 0;
+							height: 0;
+						}
+
+						&.droped  {
+							&:before {
+								transform: rotate(180deg);
+								transform-origin: 50% 25%;
+							}
+						}
+					}
 				}
 			}
 
-			&.droped.has-children > a,
-			&.droped.has-children > span {
-				&:before {
-					transform: rotate(180deg);
-					transform-origin: 50% 25%;
-				}
+			&.has-children > a {
+				
 			}
 		}
 	}
@@ -114,7 +181,7 @@
 .page-content {
 
 	@include media-breakpoint-up(sm) {
-		box-shadow: 3px 0px 5px 0 rgba(0, 0, 0, 0.2);
+		box-shadow: 3px 4px 5px 0 rgba(0, 0, 0, 0.2);
 	}
 	
 	&.ham-active {
@@ -128,4 +195,9 @@
 			transform: translateX(0);
 		}
 	}
+}
+
+.header.active + .ham-panel .ham-panel__holder:before,
+.header.sticky + .ham-panel .ham-panel__holder:before {
+	box-shadow: none;
 }
