--- a/src/html/page-list.twig
+++ b/src/html/page-list.twig
@@ -17,11 +17,10 @@
 {% endblock %}
 
 {% block stylesheets %}
-	<link rel="preload" as="style" href="assets/stylesheets/page-list.min.css"  onload="this.rel='stylesheet'" />
-	<noscript><link rel="stylesheet" href="assets/stylesheets/page-list.min.css"></noscript>
+	<link rel="stylesheet" href="assets/stylesheets/page-list.min.css">
 {% endblock %}
 
 {% block javascripts %}
-	<script src="assets/javascripts/page-list.js"></script>
+ 
 {% endblock %}
  
