--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -102,7 +102,9 @@
 		</div>
 	</div>
 	
-	<script src="assets/javascripts/main.js"></script>
-	{% block javascripts %} {% endblock %}
+	
+	{% block javascripts %}
+
+	{% endblock %}
 </body>
 </html>
