--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -102,9 +102,7 @@
 		</div>
 	</div>
 	
-	
-	{% block javascripts %}
-
-	{% endblock %}
+	<script src="assets/javascripts/main.js"></script>
+	{% block javascripts %} {% endblock %}
 </body>
 </html>
